# oz_01_collabo-006

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
OZ-Project/: README.md
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  citi.py  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  mondodb.py  mongoengine.md  pyproject.toml  run.sh
backend/categories/: admin.py  models.py  serializers.py  urls.py  util.py  views.py
backend/categories/management/commands/: place_import.py
backend/categories/migrations/: 0001_initial.py  0002_alter_place_dog_size_alter_place_extra_fee_and_more.py  0003_alter_place_number_alter_place_postal_code.py
backend/common/: models.py
backend/config/: __init__.py  app.py  settings.py  urls.py  views.py  wsgi.py
backend/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
backend/reviews/migrations/: 0001_initial.py  0002_alter_review_rating.py  0002_initial.py
backend/social/: urls.py
backend/templates/: base.html  index.html
backend/templates/categories/: places.html
backend/templates/users/: index.html  login.html  signup.html
backend/users/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username.py  0002_alter_user_options.py  0003_user_profile_image_user_short_description.py  0004_dogs_user_dogs_size.py  0005_rename_dogs_dog.py  0006_alter_dog_id.py  0007_alter_dog_max_weight_alter_dog_min_weight.py
config/: asgi.py  settings.py  (+2 more)
(+53 files in other folders)
