[tool.poetry]
name = "oz06"
version = "0.1.0"
description = ""
authors = ["oz-01-06"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.15.1"
pymongo = "^4.6.3"
pillow = "^10.3.0"
django-allauth = "^0.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
